fixing center align of all labels and input fields

--- a/CSS/screen.css
+++ b/CSS/screen.css
@@ -450,23 +450,24 @@ body
 {
   background-image: url("https://github.com/asuhail1270106/AbdullahSuhail-Project1/blob/master/images/Assassins%20Creed%20Origins%20GIF.gif?raw=true");
   background-color: rgb(0, 0, 0);
-  background-size: 50%;
+  background-size: 40%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center top;
   font-family: 'Times New Roman', sans-serif;
-  color: #000000;
+  color: rgba(185, 150, 54, 0.993);
   margin: auto;
   width: 60%;
   padding: .50em;
   font-size: 1.0em;
+  line-height: 1.5;
 }
 
 #bodyspecs
 {
   /*margin: .5em;*/
   border: .25em solid rgba(185, 150, 54, 0.993);
-  background-color: rgb(240, 239, 239);
+  background-color: rgb(0, 0, 0);
 }
 
 #center
@@ -480,6 +481,13 @@ body
   align-items: center;
   /*overflow: scroll;*/
   /*position: relative;*/
+}
+
+#formcenter
+{
+  margin: auto;
+  text-align: center;
+  display:inline-block;
 }
 
 
